tests/ui/macros/macro-backtrace-nested.stderr
error[E0425]: cannot find value `fake` in this scope
  --> $DIR/macro-backtrace-nested.rs:5:12
   |
LL | / macro_rules! nested_expr {
LL | |     () => (fake)
   | |            ^^^^ not found in this scope
LL | |
LL | | }
   | |_- in this expansion of `nested_expr!` (#2)
LL |
LL | / macro_rules! call_nested_expr {
LL | |     () => (nested_expr!())
   | |            -------------- in this macro invocation (#2)
LL | | }
   | |_- in this expansion of `call_nested_expr!` (#1)
...
LL |       1 + call_nested_expr!();
   |           ------------------- in this macro invocation (#1)

error[E0425]: cannot find value `fake` in this scope
  --> $DIR/macro-backtrace-nested.rs:5:12
   |
LL | / macro_rules! nested_expr {
LL | |     () => (fake)
   | |            ^^^^ not found in this scope
LL | |
LL | | }
   | |_- in this expansion of `nested_expr!` (#2)
...
LL | / macro_rules! call_nested_expr_sum {
LL | |     () => { 1 + nested_expr!(); }
   | |                 -------------- in this macro invocation (#2)
LL | | }
   | |_- in this expansion of `call_nested_expr_sum!` (#1)
...
LL |       call_nested_expr_sum!();
   |       ----------------------- in this macro invocation (#1)

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
